@@ -221,6 +221,9 @@ Release 2.6.0 - UNRELEASED
     MAPREDUCE-6010. HistoryServerFileSystemStateStore fails to update tokens
     (jlowe)
 
+    MAPREDUCE-5878. some standard JDK APIs are not part of system classes
+    defaults (Sangjin Lee via jlowe)
+
 Release 2.5.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
